--- a/TheLastPutt/Base.lproj/Main.storyboard
+++ b/TheLastPutt/Base.lproj/Main.storyboard
@@ -98,6 +98,7 @@
                                 </state>
                                 <connections>
                                     <action selector="SetLevel:" destination="Q8p-pg-4Cc" eventType="touchUpInside" id="hNy-da-uPu"/>
+                                    <action selector="test:" destination="Q8p-pg-4Cc" eventType="touchUpInside" id="Q6a-F9-N4S"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YiJ-Nj-4DL">
@@ -206,7 +207,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="23b-HI-eDL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-761" y="73"/>
+            <point key="canvasLocation" x="-734" y="100"/>
         </scene>
         <!--Level Select Controller-->
         <scene sceneID="ogz-og-3tR">
@@ -351,6 +352,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="scQ-8s-FTm"/>
-        <segue reference="FXh-4p-PP1"/>
+        <segue reference="XMz-bz-L2a"/>
     </inferredMetricsTieBreakers>
 </document>
