More sound stuff

--- a/TheLastPutt/Base.lproj/Main.storyboard
+++ b/TheLastPutt/Base.lproj/Main.storyboard
@@ -350,7 +350,7 @@
         <image name="spaceMeteors_004" width="220" height="221"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="scQ-8s-FTm"/>
+        <segue reference="YII-ok-nil"/>
         <segue reference="FXh-4p-PP1"/>
     </inferredMetricsTieBreakers>
 </document>
