--- a/TheLastPutt/Base.lproj/Main.storyboard
+++ b/TheLastPutt/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main Menu Controller-->
         <scene sceneID="KMq-Ou-xbR">
             <objects>
-                <viewController id="dyv-pT-IOH" sceneMemberID="viewController">
+                <viewController id="dyv-pT-IOH" customClass="MainMenuController" customModule="TheLastPutt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2VI-4d-Nsd">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
